# ml-zoomcamp-2025

./: .gitignore  README.md
fraud-detection/: .dockerignore  Dockerfile  README.md  app.py  client_demo.py  fly.toml  pyproject.toml  test_api.py  trainer.py
fraud-detection/artifacts/: meta.json  scaler.pkl  score_stats.json
fraud-detection/models/production/: autoencoder_20251221_220800.pth  autoencoder_20251221_230340.pth  deep_svdd_20251221_220800.pth  deep_svdd_20251221_230340.pth  ensemble_config.json  isolation_forest_20251221_230340.pkl  results_20251221_220800.csv  results_20251221_230340.csv  run_summary_20251221_220800.json  run_summary_20251221_230340.json  vae_20251221_220800.pth  vae_20251221_230340.pth
fraud-detection/notebooks/: 02_feature_engineering.ipynb  03_modeling.ipynb  04_hyperparameter_optimization.ipynb  05_production_training_updated.ipynb  best_baseline_autoencoder.pth  best_deep_svdd.pth  best_vae.pth  eda_insights.pkl
fraud-detection/notebooks/artifacts/: config.json  feature_engineering_artifacts.pkl  y_test.npy  y_train.npy  y_val.npy
fraud-detection/notebooks/optimization_results/: optimization_results.json  study_autoencoder.pkl  study_multi.pkl  study_svdd.pkl  study_threshold.pkl  study_vae.pkl
midterm/: .dockerignore  Dockerfile  README.md  app.py  fly.toml  notebook.ipynb  predict.py  preprocessing_utils.py  pyproject.toml  test.py  test.txt  train_model.py
midterm/models/: house_price_model.pkl
week_1/: homework_1.ipynb
week_2/: 02-carprice.ipynb  homework_2.ipynb
week_3/: homework_3.ipynb
week_6/: homework.ipynb
(+23 files in other folders)
