[project]
name = "fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "optuna>=4.6.0",
    "optuna-dashboard>=0.20.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "uvicorn>=0.40.0",
]
