[project]
name = "midterm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.121.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "np>=1.0.2",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "optuna-integration>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.5",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
